src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Trim__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle Interiors 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is ”Vehicle_Trim“</description>
        <label>Trim</label>
        <picklist>
            <picklistValues>
                <fullName>125A MB-TEX / LEATHER TWIN/ARTICO - BEIGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO/珍珠光泽米色织物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO/羊驼灰织物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO/黑色织物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARTICO皮饰, 黄色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRABUS皮饰套件</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo 内饰，典雅红色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo 内饰，栗色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，毛里求斯蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，沙灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，浅棕色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，炭灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，石墨绿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，神秘红</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，神秘蓝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，自然色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo内饰，银色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo 内饰，黑色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo木饰，炭灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo皮饰,瓷器黄/黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo纳帕皮革，黑色和白色，带特殊黑色缝线</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格木饰, 钢琴漆黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格的方向盘和换档杆, 钢琴漆黑</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格的方向盘和换档杆，炭灰色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designo风格的方向盘和换档杆，自然色</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather Exclusive brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB-TEX / LEATHER TWIN/ARTICO - BLACK / ANTHRACITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB-TEX / LEATHER TWIN/ARTICO - GREY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAPPA自然米色真皮</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>加利福尼亚浅褐</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpdatedByEpTransactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging:</description>
        <inlineHelpText>The integration layer (EP) needs this field for defect handling and debugging:</inlineHelpText>
        <label>UpdatedByEpTransactions</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UsVIN__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Vehicle UsVIN 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: 
Modify Reason: 
*/
Attribute in Data Dictionary object Vehicle is ”Vehicle_UsVIN“</description>
        <label>UsVIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <description>/* 
Created by: Tony Li 
Used by: Tony Li 
Function: Flag to indicate whether the VIN is valid 
Used in: Pagelayouts, Reports 

Modify History 
Modify By: Mouse Liu
Modify Reason: Just change the field type to Picklist with LOV &apos;Unknown Yes No&apos;
*/
Attribute in Data Dictionary object Vehicle is ”Vehicle_Valid“</description>
        <label>Validity</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <description>To record the start date of warranty for the vehicle</description>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>UsVIN__c</columns>
        <columns>NAME</columns>
        <columns>BodyType__c</columns>
        <columns>CBU_CKD__c</columns>
        <columns>Class__c</columns>
        <columns>Model__c</columns>
        <columns>EuroVIN__c</columns>
        <columns>Colour__c</columns>
        <columns>CommissionNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>V-{0000000000}</displayFormat>
        <label>Vehicle ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CP_EURO_VIN_Lenght_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu 
Used by: US-CP-004 
Function: 
1. CP means Contact Portfolio 
2. EURO-VIN must be 17 or 18 characters. 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND (
	NOT(ISNULL( EuroVIN__c )),
	NOT(ISBLANK( EuroVIN__c )),
	LEN( EuroVIN__c ) &lt;&gt; 17,
	LEN( EuroVIN__c ) &lt;&gt; 18
)</errorConditionFormula>
        <errorMessage>EURO-VIN must be 17 or 18 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CP_RecallBatches_RecallReason_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu
Used by:  US-CP-004
Function: 
1. CP means Contact Portfolio 
2. If Recall is not flaged, RecallBatches and RecallReason could&apos;t be filled. 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND (
	Recall__c = false,
	
	OR (
		AND (
			NOT(ISNULL( RecallBatches__c)),
			NOT(ISBLANK(RecallBatches__c))
		),
		
		AND (
			NOT(ISNULL(RecallReason__c)),
			NOT(ISBLANK(RecallReason__c))
		)
	)
)</errorConditionFormula>
        <errorMessage>If Recall is not flaged, RecallBatches and RecallReason could&apos;t be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CP_US_VIN_Length_Check</fullName>
        <active>true</active>
        <description>/* 
Created by: Mouse Liu 
Used by: US-CP-004 
Function: 
1. CP means Contact Portfolio 
2. US-VIN must be 17 characters. 
Used in: 

Modify History 
Modify By: 
Modify Reason: 
*/</description>
        <errorConditionFormula>AND (
	NOT(ISNULL( UsVIN__c )),
	NOT(ISBLANK( UsVIN__c )),
	LEN( UsVIN__c ) &lt;&gt; 17
)</errorConditionFormula>
        <errorMessage>US-VIN must be 17 characters.</errorMessage>
    </validationRules>
</CustomObject>